<resources>
    <string name="app_name">Bike Kollective</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec laoreet augue. Vestibulum in sagittis purus. Ut congue turpis ac odio faucibus, sit amet fermentum lacus commodo. Integer sed lectus id nisl pulvinar rutrum. Phasellus dignissim vitae justo ac pharetra. Aliquam placerat nisi sit amet justo tincidunt dapibus. Nam pretium, sapien ac consectetur lacinia, sapien leo placerat dolor, ut dignissim quam magna vitae lectus.</string>
    <string name="signup_header">Agreement</string>
    <string name="signup_button_disagree">Cancel</string>
    <string name="signup_button_agree">I agree</string>
    <string name="login_header">Welcome</string>
    <string name="login_to_signup_button">Sign up</string>
    <string name="login_to_login_button">Login</string>
    <string name="account_setup_header">Loading…</string>
    <string name="account_setup_text">One moment as we setup your account…</string>
    <string name="pink_bike_with_flowers">pink bike with flowers</string>
    <string name="blue_sport_bike">blue sport bike</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up_waiver">SignUpWaiverActivity</string>
    <string name="title_activity_account_setup">AccountSetupActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_form_description">Description</string>
    <string name="create_form_combination">Lock Combination</string>
    <string name="create_form_camera">Tap to add photo</string>
    <string name="create_form_location">Location:</string>
    <string name="create_form_submit">Submit</string>
    <string name="edit_close_camera_button">close camera button</string>
    <string name="edit_choose_tags">Choose tags</string>
    <string name="edit_form_submit">Submit</string>
    <string name="title_activity_pick_location_maps">PickLocationMapsActivity</string>
    <string name="current_location">Current Location:</string>
</resources>