<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="135dp" />

    <ImageView
        android:id="@+id/login_splash_image"
        android:layout_width="386dp"
        android:layout_height="338dp"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header"
        app:srcCompat="@drawable/pink_bike_flowers" />

    <Button
        android:id="@+id/login_to_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#A6A5A5"
        android:text="@string/login_to_signup_button"
        android:textColor="#000000"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_splash_image" />

    <Button
        android:id="@+id/login_to_login_button"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:backgroundTint="#A6A5A5"
        android:text="@string/login_to_login_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_to_signup_button"
        app:layout_constraintVertical_bias="0.183" />
</androidx.constraintlayout.widget.ConstraintLayout>